--- a/index.html
+++ b/index.html
@@ -1,122 +1,160 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Love Letter</title>
 <style>
-*{box-sizing:border-box;margin:0;padding:0;font-family:sans-serif}
+*{margin:0;padding:0;box-sizing:border-box;font-family:sans-serif}
 body{
-  background:#ffd6e8 url("https://png.pngtree.com/background/20230528/original/pngtree-beautiful-pink-peonies-on-a-soft-paper-background-picture-image_2782772.jpg");
-  background-size:cover;
-  background-position:center;
-  overflow:hidden;
+    background:#ffd6e8 url("https://png.pngtree.com/background/20230528/original/pngtree-beautiful-pink-peonies-on-a-soft-paper-background-picture-image_2782772.jpg");
+    background-size:cover;
+    background-position:center;
+    overflow:hidden;
 }
 
-#wrapper{width:auto;margin:auto}
 .envelope{
-  width:200px;height:100px;margin:0 auto;background:#ddd;
-  box-shadow:0 0 1px rgba(0,0,0,.5),0 1px 3px rgba(0,0,0,.25);
-  position:relative;perspective:800px;
+    width:260px;
+    height:160px;
+    margin:120px auto 0;
+    position:relative;
+    background:#e5e5e5;
+    box-shadow:0 6px 20px rgba(0,0,0,.25);
+    perspective:1000px;
 }
-.envelope:after{
-  content:"";position:absolute;top:0;left:0;width:0;height:0;
-  border:45px 100px solid rgba(0,0,0,.25);border-top-color:transparent;z-index:2;
+
+.envelope .top{
+    width:0;
+    height:0;
+    border-left:130px solid transparent;
+    border-right:130px solid transparent;
+    border-bottom:90px solid #d4d4d4;
+    position:absolute;
+    top:-90px;
+    left:0;
+    transform-origin:bottom;
+    transform:rotateX(0deg);
+    z-index:3;
+    transition:1s;
 }
-.envelope .flap{position:absolute;width:100%;height:0;border:50px 100px solid transparent;z-index:3}
-.envelope .flap.front{border-left-color:#eee;border-right-color:#eee;border-bottom-color:#ccc}
-.envelope .flap.front:after{
-  content:"";width:100%;height:0;position:absolute;left:-100px;bottom:-50px;
-  border:49px 100px solid transparent;border-bottom-color:#eee;
+
+.envelope.open .top{
+    transform:rotateX(180deg);
 }
-.envelope .flap.top{
-  border-top-width:55px;border-top-color:#aaa;z-index:3;
-  animation-duration:1s;animation-delay:1s;animation-fill-mode:forwards;
-  transform-origin:top;transform-style:preserve-3d;
-}
-.envelope.open .flap.top{animation-name:flip}
 
 .envelope .letter{
-  position:absolute;width:194px;height:84px;top:8px;left:3px;z-index:1;
-  border:1px solid #ccc;background-size:cover;background-position:center;
-  animation:remove 2s 1.5s forwards;transform-style:preserve-3d;
+    width:240px;
+    height:300px;
+    background:white;
+    position:absolute;
+    top:20px;
+    left:10px;
+    z-index:2;
+    border-radius:6px;
+    transform:translateY(0) scale(1);
+    transition:1.2s;
+    background-size:cover;
+    background-position:center;
 }
-.envelope.open .letter{animation-name:remove}
 
-@keyframes flip{100%{transform:rotateX(180deg);z-index:1}}
-@keyframes remove{50%{top:-120px}100%{top:8px;z-index:5}}
+.envelope.open .letter{
+    transform:translateY(-240px) scale(1.15);
+    z-index:10;
+}
 
-.pop-up{margin-top:-100px;animation:drop 1s ease forwards}
-@keyframes drop{100%{transform:translateY(300px);opacity:1}}
+#viewer{
+    width:240px;
+    height:300px;
+    background:white;
+    position:absolute;
+    top:-240px;
+    left:10px;
+    border-radius:6px;
+    background-size:cover;
+    background-position:center;
+    opacity:0;
+    transition:.5s;
+    z-index:20;
+    cursor:pointer;
+}
 
-.confetti{position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;z-index:999}
+#viewer.show{
+    opacity:1;
+}
+
+.confetti{
+    position:fixed;
+    top:0;left:0;
+    width:100%;height:100%;
+    pointer-events:none;
+    z-index:999;
+}
 </style>
 </head>
 <body>
 
 <canvas class="confetti" id="confetti"></canvas>
 
-<div class="pop-up">
-  <div id="wrapper">
-    <div class="envelope open" id="env">
-      <div class="flap front"></div>
-      <div class="flap top"></div>
-      <div class="letter" id="letter-img"></div>
-    </div>
-  </div>
+<div class="envelope" id="env">
+    <div class="top"></div>
+    <div class="letter" id="letter"></div>
+    <div id="viewer"></div>
 </div>
 
 <script>
-let imgs=[
-  "https://img.meta.com.vn/Data/image/2021/10/23/nhung-cau-chuc-20-11-3.jpg",
-  "https://i.pinimg.com/736x/3a/d1/10/3ad11028c6f7ca61bcd2816e6ead3979.jpg",
-  "https://i.pinimg.com/736x/61/2b/f0/612bf089344f5775a3a32f1464cb147f.jpg"
+let list=[
+ "https://img.meta.com.vn/Data/image/2021/10/23/nhung-cau-chuc-20-11-3.jpg",
+ "https://i.pinimg.com/736x/3a/d1/10/3ad11028c6f7ca61bcd2816e6ead3979.jpg",
+ "https://i.pinimg.com/736x/61/2b/f0/612bf089344f5775a3a32f1464cb147f.jpg"
 ]
 
-let page=0
-let total=imgs.length
-let letter=document.getElementById("letter-img")
-letter.style.backgroundImage=`url(${imgs[0]})`
+let env=document.getElementById("env")
+let letter=document.getElementById("letter")
+let viewer=document.getElementById("viewer")
+let index=0
 
-document.getElementById("env").onclick=function(){
-  page++
-  if(page>=total)page=0
-  letter.style.backgroundImage=`url(${imgs[page]})`
+letter.style.backgroundImage=`url(${list[0]})`
+viewer.style.backgroundImage=`url(${list[0]})`
+
+setTimeout(()=>env.classList.add("open"),900)
+
+setTimeout(()=>viewer.classList.add("show"),2000)
+
+viewer.onclick=function(){
+    index++
+    if(index>=list.length)return
+    viewer.style.backgroundImage=`url(${list[index]})`
 }
 
-const confettiCanvas=document.getElementById("confetti")
-const ctx=confettiCanvas.getContext("2d")
-let W=window.innerWidth,H=window.innerHeight
-confettiCanvas.width=W;confettiCanvas.height=H
-let particles=[]
-
-for(let i=0;i<200;i++){
-  particles.push({x:Math.random()*W,y:Math.random()*H,r:Math.random()*4+1,d:Math.random()*200})
+const canvas=document.getElementById("confetti")
+const ctx=canvas.getContext("2d")
+let W=innerWidth,H=innerHeight
+canvas.width=W;canvas.height=H
+let p=[]
+for(let i=0;i<150;i++){
+ p.push({x:Math.random()*W,y:Math.random()*H,r:Math.random()*4+1,d:Math.random()*200})
 }
-
+let a=0
 function draw(){
-  ctx.clearRect(0,0,W,H)
-  ctx.fillStyle="rgba(255,255,255,.9)"
-  particles.forEach(p=>{
-    ctx.beginPath()
-    ctx.moveTo(p.x,p.y)
-    ctx.arc(p.x,p.y,p.r,0,Math.PI*2)
-    ctx.fill()
-  })
-  update()
+ ctx.clearRect(0,0,W,H)
+ ctx.fillStyle="rgba(255,255,255,.9)"
+ p.forEach(s=>{
+  ctx.beginPath()
+  ctx.arc(s.x,s.y,s.r,0,2*Math.PI)
+  ctx.fill()
+ })
+ update()
 }
-
-let angle=0
 function update(){
-  angle+=0.01
-  particles.forEach(p=>{
-    p.y+=Math.cos(angle+p.d)+1+p.r/2
-    p.x+=Math.sin(angle)*2
-    if(p.y>H){p.y=-10;p.x=Math.random()*W}
-  })
+ a+=0.01
+ p.forEach(s=>{
+  s.y+=Math.cos(a+s.d)+1+s.r/2
+  s.x+=Math.sin(a)*2
+  if(s.y>H){s.y=-10;s.x=Math.random()*W}
+ })
 }
-
 setInterval(draw,15)
 </script>
+
 </body>
 </html>
